Finish consent cookie handling

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "version": "1.0.0",
     "require": {
-        "typo3/cms-core": "^10.0"
+        "typo3/cms-core": "^10.0",
+        "tollwerk/tw-base": "^3.0"
     },
     "autoload": {
         "psr-4": {
