--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,10 @@
     "replace": {
         "tollwerk/tw_eprivacy": "self.version",
         "typo3-ter/tw-eprivacy": "self.version"
+    },
+    "extra": {
+        "typo3/cms": {
+            "extension-key": "tw_eprivacy"
+        }
     }
 }
