--- a/composer.json
+++ b/composer.json
@@ -2,14 +2,23 @@
     "name": "tollwerk/tw-eprivacy",
     "type": "typo3-cms-extension",
     "description": "ePrivacy Consent Manager",
+    "license": ["GPL-2.0-or-later"],
     "authors": [
         {
             "name": "Joschi Kuphal",
+            "email": "joschi@tollwerk.de",
+            "homepage": "https://tollwerk.de",
+            "role": "Developer"
+        },
+        {
+            "name": "Klaus Fiedler",
+            "email": "klaus@tollwerk.de",
+            "homepage": "https://tollwerk.de",
             "role": "Developer"
         }
     ],
     "require": {
-        "typo3/cms-core": "^11.5"
+        "typo3/cms-core": "^11"
     },
     "autoload": {
         "psr-4": {
@@ -17,7 +26,12 @@
         }
     },
     "replace": {
-        "tw_eprivacy": "self.version",
+        "tollwerk/tw_eprivacy": "self.version",
         "typo3-ter/tw-eprivacy": "self.version"
+    },
+    "extra": {
+        "typo3/cms": {
+            "extension-key": "tw_eprivacy"
+        }
     }
 }
